2009-02-03  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-cid-retrieve): Remove a wrong set-buffer().

2009-02-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-input-url): Offer decoded url in the minibuffer.
	(w3m-copy-buffer): Copy w3m-current-coding-system.
	(w3m-header-line-insert): Display decoded url.

2009-02-02  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-idle-images-show): Change the order of image retrieving.
	(w3m-toggle-inline-images-internal): Use `w3m-idle-image-item'
	text-property.
	(w3m-goto-url): Add new argument `no-popup'.
	(w3m-goto-url-with-timer): Call w3m-goto-url with `no-popup' nil.

2009-02-01  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-toggle-inline-images-internal): Add new argument
	`safe-regexp'.
	(w3m-toggle-inline-images): Pass `safe-regexp' to
	w3m-toggle-inline-images-internal when called non-interactively.

2009-01-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-proc.el: Autoload w3m-idle-images-show-unqueue when compiling.

2009-01-27  Naohiro Aota  <naota@elisp.net>

	* w3m-proc.el (w3m-process-stop): Call `w3m-idle-images-show-unqueue'.

	* w3m.el (w3m-idle-images-show-timer, w3m-idle-images-show-list)
	(w3m-idle-images-show-interval): New variables.
	(w3m-idle-images-show, w3m-idle-images-show-unqueue): New functions.
	(w3m-toggle-inline-images-internal): Use them.

2009-01-26  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-content-type-alist): Add "application/x-pdf" content
	type.

2009-01-21  Kevin Ryde  <user42@zip.com.au>

	* w3m.el (w3m-search-name-anchor): Return true meaning "found" if
	point is already at the anchor position.

2009-01-21  Naohiro Aota  <naota@elisp.net>

	* w3m-session.el (w3m-session-last-autosave-session): Check if
	autosaved sessions set exists before asking whether to load the last
	sessions set; Search older sessions sets when the last sessions set
	doesn't exist (maybe it is removed by user); Load autosaved sessions